# alex

./: .env.example  .gitignore  README.md  docker-compose.yml
services/agent-runtime/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/agent-runtime/src/alex_agent_runtime/: __init__.py  config.py  db.py  main.py  middleware.py  schemas.py  tenant_context.py  webhook_signing.py
services/agent-runtime/src/alex_agent_runtime/jobs/: heartbeat.py
services/agent-runtime/src/alex_agent_runtime/routes/: callbacks.py  connections.py  events.py  health.py  ingestion.py  onboarding.py  pipedream_connect_webhooks.py
services/agent-runtime/src/alex_agent_runtime/services/: activation_tracker.py  agent_backend.py  approval_expiry_scan.py  approval_gate.py  approval_handler.py  approved_action_dispatcher.py  audit_log.py  composer_base.py  connect_account_resolver.py  connection_repo.py  crm_adapters.py  crm_fetch_client.py  crm_note_composer.py  crm_reader.py  crm_validator.py  crm_write_client.py  crm_writer.py  delivery_escalation_scan.py  delivery_preferences.py  delivery_tracker.py  email_send_client.py  embedding_client.py  embedding_indexer.py  event_bus.py  event_processor.py  feature_router.py  follow_up_draft_composer.py  ingestion_pipeline.py  ingestion_provider.py  meeting_brief_composer.py  meeting_brief_scan.py  meeting_classifier.py  meeting_completion_scan.py  meeting_events.py  memory_store.py  memory_summarizer.py  messaging_delivery_client.py  messaging_identity_repo.py  oauth_orchestrator.py  oauth_provider.py  (+12 more)
services/agent-runtime/tests/: conftest.py  test_activation_tracker.py  test_agent_backend.py  test_approval_expiry_scan.py  test_approval_gate.py  test_approval_handler.py  test_approved_action_dispatcher.py  test_callbacks.py  test_connection_repo.py  test_crm_adapters.py  test_crm_pipedream_connect.py  test_crm_reader.py  test_crm_validator.py  test_crm_writer.py  test_delivery_escalation.py  test_delivery_preferences.py  test_email_send_client.py  test_embedding_indexer.py  test_event_bus.py  test_events.py  test_health.py  test_ingestion_pipeline.py  test_meeting_classifier.py  test_meeting_completion_scan.py  test_memory_review_fixes.py  test_memory_store.py  test_memory_summarizer.py  test_oauth_provider_pipedream_connect.py  test_onboarding_flow.py  test_onboarding_routes.py  test_output_router.py  test_phase4_composers.py  test_pipedream_client.py  test_pipedream_connect_client.py  test_pipedream_connect_webhook.py  test_signed_events.py  test_tenant_flags.py  test_transcript_fetcher.py  test_voice_applicator.py  test_voice_profile_store.py  (+3 more)
services/data-layer/: README.md  alembic.ini  pyproject.toml
services/data-layer/alembic/: env.py
services/data-layer/alembic/versions/: 0001_initial_schema.py  0002_processed_events.py  0003_oauth_connections.py  0004_messaging_identities.py  0005_memory_dedup_indexes.py  0006_task_state_expired.py  0007_delivery_statuses.py  0008_onboarding_state.py
services/data-layer/src/alex_data_layer/: __init__.py
services/pipedream/: .gitignore  README.md  package.json
services/teams-bot/: Dockerfile  README.md  pyproject.toml
services/teams-bot/src/alex_teams_bot/: __init__.py  activity_handler.py  adapter.py  config.py  main.py  middleware.py  schemas.py
services/teams-bot/src/alex_teams_bot/routes/: deliver.py  messages.py  oauth.py
services/teams-bot/src/alex_teams_bot/services/: adaptive_cards.py  oauth_providers.py  pipedream_client.py  runtime_client.py  signing.py
services/teams-bot/tests/: test_activity_handler.py  test_adaptive_cards.py  test_deliver.py  test_oauth.py
(+52 files in other folders)
