[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alex-agent-runtime"
version = "0.1.0"
description = "Alex Agent Runtime — FastAPI service hosting the Claude Agent SDK orchestration."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "PREDICT" }]
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "sqlalchemy[asyncio]>=2.0,<3",
    "psycopg[binary,pool]>=3.2,<4",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "claude-agent-sdk>=0.1.0,<1",
    "anthropic>=0.39,<1",
    "openai>=1.40,<2",
    "apscheduler>=3.10,<4",
    "structlog>=24.1,<25",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<0.25",
    "ruff>=0.6,<0.7",
]

[project.scripts]
alex-agent-runtime = "alex_agent_runtime.main:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
# Add the package source root to sys.path so tests run even when the
# editable .pth file has been quarantined by macOS's UF_HIDDEN flag
# (a known pip-on-macOS quirk that affects both setuptools and hatchling
# editable installs). See README for details.
pythonpath = ["src"]
