[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alex-teams-bot"
version = "0.1.0"
description = "Alex Microsoft Teams delivery surface — renders AgentOutput as Adaptive Cards, relays approvals + OAuth tokens."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "PREDICT" }]
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.31",
    "botbuilder-core>=4.16,<5",
    "botbuilder-schema>=4.16,<5",
    "botframework-connector>=4.16,<5",
    "aiohttp>=3.10,<4",
    "httpx>=0.27,<0.28",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "structlog>=24.1,<25",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<0.25",
    "ruff>=0.6,<0.7",
]

[project.scripts]
alex-teams-bot = "alex_teams_bot.main:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
